[tool.poetry]
name = "gpkg-creator"
version = "0.3"
description = "Creates geopackages that match the requirements for the DBGI project"
authors = ["edouardbruelhart <edouard.bruelhart@unifr.ch>"]
license = "GNU 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
